<resources>
    <string name="app_name">FormulaCalculator</string>
    <string name="text_view_hint">0</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="x">×</string>
    <string name="_minus">-</string>
    <string name="_plus">+</string>
    <string name="_plusminus">⁺∕₋</string>
    <string name="_percent">%</string>
    <string name="_splash">÷</string>
    <string name="_0">0</string>
    <string name="_dot">.</string>
    <string name="_equals">=</string>
    <string name="parleft">(</string>
    <string name="parright">)</string>
    <string name="mc">mc</string>
    <string name="m">m+</string>
    <string name="mminus">m-</string>
    <string name="mr">mr</string>
    <string name="_2nd">2nd</string>
    <string name="x2">x²</string>
    <string name="x3">x³</string>
    <string name="xy">Xʸ</string>
    <string name="ex">eˣ</string>
    <string name="_10x">10x</string>
    <string name="_1_x">1/x</string>
    <string name="empty">-</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="ee">EE</string>
    <string name="e">e</string>
    <string name="rad">rad</string>
    <string name="conh">conh</string>
    <string name="sinh">sinh</string>
    <string name="tanh">tanh</string>
    <string name="π">π</string>
    <string name="rand">rand</string>
    <string name="rad1">Rad</string>
    <string name="rand1">Rand</string>
    <string name="oo">x!</string>
    <string name="log100">log10</string>
    <string name="ln">ln</string>
    <string name="_2_x">2√x</string>
    <string name="_3_x">3√x</string>
    <string name="y_x">y√x</string>
    <string name="undo">↻</string>
    <string name="redo">↺</string>
    <string name="backspace">⌫</string>
    <string name="ac">AC</string>
    <string name="c">C</string>
    <string name="scientific">Scientific</string>


</resources>